--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Transparent Grid Background</title>
+    <title>HashPrep - Dataset Debugging Playground</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap");
       html,
