fix: update hashprep version and report format

--- a/examples/reports/train_hashprep_report.html
+++ b/examples/reports/train_hashprep_report.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <h1>Dataset Quality Report</h1>
-    <p>Generated: 2025-09-24 22:26:43</p>
-    <p>HashPrep Version: 1.0.0-MVP</p>
+    <p>Generated: 2025-09-25 11:43:31</p>
+    <p>HashPrep Version: 0.1.0-alpha</p>
     <h2>Executive Summary</h2>
     <ul>
         <li>Critical Issues: 13</li>
@@ -519,7 +519,7 @@
       <td>0</td>
       <td>A/5 21171</td>
       <td>7.2500</td>
-      <td>NaN</td>
+      <td>None</td>
       <td>S</td>
     </tr>
     <tr>
@@ -547,7 +547,7 @@
       <td>0</td>
       <td>STON/O2. 3101282</td>
       <td>7.9250</td>
-      <td>NaN</td>
+      <td>None</td>
       <td>S</td>
     </tr>
     <tr>
@@ -575,7 +575,7 @@
       <td>0</td>
       <td>373450</td>
       <td>8.0500</td>
-      <td>NaN</td>
+      <td>None</td>
       <td>S</td>
     </tr>
   </tbody>
@@ -610,7 +610,7 @@
       <td>0</td>
       <td>211536</td>
       <td>13.00</td>
-      <td>NaN</td>
+      <td>None</td>
       <td>S</td>
     </tr>
     <tr>
@@ -638,7 +638,7 @@
       <td>2</td>
       <td>W./C. 6607</td>
       <td>23.45</td>
-      <td>NaN</td>
+      <td>None</td>
       <td>S</td>
     </tr>
     <tr>
@@ -666,7 +666,7 @@
       <td>0</td>
       <td>370376</td>
       <td>7.75</td>
-      <td>NaN</td>
+      <td>None</td>
       <td>Q</td>
     </tr>
   </tbody>
@@ -691,144 +691,144 @@
   </thead>
   <tbody>
     <tr>
-      <td>726</td>
+      <td>891</td>
       <td>0</td>
       <td>3</td>
-      <td>Oreskovic, Mr. Luka</td>
+      <td>Dooley, Mr. Patrick</td>
       <td>male</td>
-      <td>20.0</td>
+      <td>32.0</td>
       <td>0</td>
       <td>0</td>
-      <td>315094</td>
-      <td>8.6625</td>
-      <td>NaN</td>
-      <td>S</td>
+      <td>370376</td>
+      <td>7.7500</td>
+      <td>None</td>
+      <td>Q</td>
     </tr>
     <tr>
-      <td>578</td>
+      <td>609</td>
       <td>1</td>
-      <td>1</td>
-      <td>Silvey, Mrs. William Baird (Alice Munger)</td>
+      <td>2</td>
+      <td>Laroche, Mrs. Joseph (Juliette Marie Louise Lafargue)</td>
       <td>female</td>
-      <td>39.0</td>
+      <td>22.0</td>
       <td>1</td>
-      <td>0</td>
-      <td>13507</td>
-      <td>55.9000</td>
-      <td>E44</td>
-      <td>S</td>
-    </tr>
-    <tr>
-      <td>529</td>
-      <td>0</td>
-      <td>3</td>
-      <td>Salonen, Mr. Johan Werner</td>
-      <td>male</td>
-      <td>39.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>3101296</td>
-      <td>7.9250</td>
-      <td>NaN</td>
-      <td>S</td>
-    </tr>
-    <tr>
-      <td>259</td>
-      <td>1</td>
-      <td>1</td>
-      <td>Ward, Miss. Anna</td>
-      <td>female</td>
-      <td>35.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>PC 17755</td>
-      <td>512.3292</td>
-      <td>NaN</td>
+      <td>2</td>
+      <td>SC/Paris 2123</td>
+      <td>41.5792</td>
+      <td>None</td>
       <td>C</td>
     </tr>
     <tr>
-      <td>679</td>
-      <td>0</td>
-      <td>3</td>
-      <td>Goodwin, Mrs. Frederick (Augusta Tyler)</td>
-      <td>female</td>
-      <td>43.0</td>
+      <td>391</td>
       <td>1</td>
-      <td>6</td>
-      <td>CA 2144</td>
-      <td>46.9000</td>
-      <td>NaN</td>
-      <td>S</td>
-    </tr>
-    <tr>
-      <td>283</td>
-      <td>0</td>
-      <td>3</td>
-      <td>de Pelsmaeker, Mr. Alfons</td>
+      <td>1</td>
+      <td>Carter, Mr. William Ernest</td>
       <td>male</td>
-      <td>16.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>345778</td>
-      <td>9.5000</td>
-      <td>NaN</td>
-      <td>S</td>
-    </tr>
-    <tr>
-      <td>114</td>
-      <td>0</td>
-      <td>3</td>
-      <td>Jussila, Miss. Katriina</td>
-      <td>female</td>
-      <td>20.0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>4136</td>
-      <td>9.8250</td>
-      <td>NaN</td>
-      <td>S</td>
-    </tr>
-    <tr>
-      <td>347</td>
+      <td>36.0</td>
       <td>1</td>
       <td>2</td>
-      <td>Smith, Miss. Marion Elsie</td>
-      <td>female</td>
-      <td>40.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>31418</td>
-      <td>13.0000</td>
-      <td>NaN</td>
+      <td>113760</td>
+      <td>120.0000</td>
+      <td>B96 B98</td>
       <td>S</td>
     </tr>
     <tr>
-      <td>148</td>
-      <td>0</td>
-      <td>3</td>
-      <td>Ford, Miss. Robina Maggie "Ruby"</td>
-      <td>female</td>
-      <td>9.0</td>
-      <td>2</td>
-      <td>2</td>
-      <td>W./C. 6608</td>
-      <td>34.3750</td>
-      <td>NaN</td>
-      <td>S</td>
-    </tr>
-    <tr>
-      <td>20</td>
+      <td>234</td>
       <td>1</td>
       <td>3</td>
-      <td>Masselmani, Mrs. Fatima</td>
+      <td>Asplund, Miss. Lillian Gertrud</td>
       <td>female</td>
-      <td>NaN</td>
+      <td>5.0</td>
+      <td>4</td>
+      <td>2</td>
+      <td>347077</td>
+      <td>31.3875</td>
+      <td>None</td>
+      <td>S</td>
+    </tr>
+    <tr>
+      <td>497</td>
+      <td>1</td>
+      <td>1</td>
+      <td>Eustis, Miss. Elizabeth Mussey</td>
+      <td>female</td>
+      <td>54.0</td>
+      <td>1</td>
       <td>0</td>
-      <td>0</td>
-      <td>2649</td>
-      <td>7.2250</td>
-      <td>NaN</td>
+      <td>36947</td>
+      <td>78.2667</td>
+      <td>D20</td>
       <td>C</td>
+    </tr>
+    <tr>
+      <td>55</td>
+      <td>0</td>
+      <td>1</td>
+      <td>Ostby, Mr. Engelhart Cornelius</td>
+      <td>male</td>
+      <td>65.0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>113509</td>
+      <td>61.9792</td>
+      <td>B30</td>
+      <td>C</td>
+    </tr>
+    <tr>
+      <td>475</td>
+      <td>0</td>
+      <td>3</td>
+      <td>Strandberg, Miss. Ida Sofia</td>
+      <td>female</td>
+      <td>22.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>7553</td>
+      <td>9.8375</td>
+      <td>None</td>
+      <td>S</td>
+    </tr>
+    <tr>
+      <td>197</td>
+      <td>0</td>
+      <td>3</td>
+      <td>Mernagh, Mr. Robert</td>
+      <td>male</td>
+      <td>NaN</td>
+      <td>0</td>
+      <td>0</td>
+      <td>368703</td>
+      <td>7.7500</td>
+      <td>None</td>
+      <td>Q</td>
+    </tr>
+    <tr>
+      <td>518</td>
+      <td>0</td>
+      <td>3</td>
+      <td>Ryan, Mr. Patrick</td>
+      <td>male</td>
+      <td>NaN</td>
+      <td>0</td>
+      <td>0</td>
+      <td>371110</td>
+      <td>24.1500</td>
+      <td>None</td>
+      <td>Q</td>
+    </tr>
+    <tr>
+      <td>556</td>
+      <td>0</td>
+      <td>1</td>
+      <td>Wright, Mr. George</td>
+      <td>male</td>
+      <td>62.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>113807</td>
+      <td>26.5500</td>
+      <td>None</td>
+      <td>S</td>
     </tr>
   </tbody>
 </table>
