feat: use dynamic versioning for hashprep
hashprep version no. is now set in `hashprep/__init__.py` and can be
accessed with `hashprep.__version__`

--- a/examples/reports/train_hashprep_report.html
+++ b/examples/reports/train_hashprep_report.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Dataset Quality Report</h1>
-    <p>Generated: 2025-09-25 11:43:31</p>
+    <p>Generated: 2025-09-26 02:09:57</p>
     <p>HashPrep Version: 0.1.0-alpha</p>
     <h2>Executive Summary</h2>
     <ul>
@@ -691,142 +691,142 @@
   </thead>
   <tbody>
     <tr>
-      <td>891</td>
+      <td>483</td>
       <td>0</td>
       <td>3</td>
-      <td>Dooley, Mr. Patrick</td>
+      <td>Rouse, Mr. Richard Henry</td>
       <td>male</td>
-      <td>32.0</td>
+      <td>50.0</td>
       <td>0</td>
       <td>0</td>
-      <td>370376</td>
-      <td>7.7500</td>
-      <td>None</td>
-      <td>Q</td>
-    </tr>
-    <tr>
-      <td>609</td>
-      <td>1</td>
-      <td>2</td>
-      <td>Laroche, Mrs. Joseph (Juliette Marie Louise Lafargue)</td>
-      <td>female</td>
-      <td>22.0</td>
-      <td>1</td>
-      <td>2</td>
-      <td>SC/Paris 2123</td>
-      <td>41.5792</td>
-      <td>None</td>
-      <td>C</td>
-    </tr>
-    <tr>
-      <td>391</td>
-      <td>1</td>
-      <td>1</td>
-      <td>Carter, Mr. William Ernest</td>
-      <td>male</td>
-      <td>36.0</td>
-      <td>1</td>
-      <td>2</td>
-      <td>113760</td>
-      <td>120.0000</td>
-      <td>B96 B98</td>
-      <td>S</td>
-    </tr>
-    <tr>
-      <td>234</td>
-      <td>1</td>
-      <td>3</td>
-      <td>Asplund, Miss. Lillian Gertrud</td>
-      <td>female</td>
-      <td>5.0</td>
-      <td>4</td>
-      <td>2</td>
-      <td>347077</td>
-      <td>31.3875</td>
+      <td>A/5 3594</td>
+      <td>8.0500</td>
       <td>None</td>
       <td>S</td>
     </tr>
     <tr>
-      <td>497</td>
-      <td>1</td>
-      <td>1</td>
-      <td>Eustis, Miss. Elizabeth Mussey</td>
-      <td>female</td>
-      <td>54.0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>36947</td>
-      <td>78.2667</td>
-      <td>D20</td>
-      <td>C</td>
-    </tr>
-    <tr>
-      <td>55</td>
-      <td>0</td>
-      <td>1</td>
-      <td>Ostby, Mr. Engelhart Cornelius</td>
-      <td>male</td>
-      <td>65.0</td>
-      <td>0</td>
-      <td>1</td>
-      <td>113509</td>
-      <td>61.9792</td>
-      <td>B30</td>
-      <td>C</td>
-    </tr>
-    <tr>
-      <td>475</td>
+      <td>387</td>
       <td>0</td>
       <td>3</td>
-      <td>Strandberg, Miss. Ida Sofia</td>
-      <td>female</td>
-      <td>22.0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>7553</td>
-      <td>9.8375</td>
+      <td>Goodwin, Master. Sidney Leonard</td>
+      <td>male</td>
+      <td>1.0</td>
+      <td>5</td>
+      <td>2</td>
+      <td>CA 2144</td>
+      <td>46.9000</td>
       <td>None</td>
       <td>S</td>
     </tr>
     <tr>
-      <td>197</td>
+      <td>785</td>
       <td>0</td>
       <td>3</td>
-      <td>Mernagh, Mr. Robert</td>
+      <td>Ali, Mr. William</td>
+      <td>male</td>
+      <td>25.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>SOTON/O.Q. 3101312</td>
+      <td>7.0500</td>
+      <td>None</td>
+      <td>S</td>
+    </tr>
+    <tr>
+      <td>299</td>
+      <td>1</td>
+      <td>1</td>
+      <td>Saalfeld, Mr. Adolphe</td>
       <td>male</td>
       <td>NaN</td>
       <td>0</td>
       <td>0</td>
-      <td>368703</td>
-      <td>7.7500</td>
-      <td>None</td>
-      <td>Q</td>
+      <td>19988</td>
+      <td>30.5000</td>
+      <td>C106</td>
+      <td>S</td>
     </tr>
     <tr>
-      <td>518</td>
-      <td>0</td>
-      <td>3</td>
-      <td>Ryan, Mr. Patrick</td>
-      <td>male</td>
+      <td>307</td>
+      <td>1</td>
+      <td>1</td>
+      <td>Fleming, Miss. Margaret</td>
+      <td>female</td>
       <td>NaN</td>
       <td>0</td>
       <td>0</td>
-      <td>371110</td>
-      <td>24.1500</td>
+      <td>17421</td>
+      <td>110.8833</td>
       <td>None</td>
-      <td>Q</td>
+      <td>C</td>
     </tr>
     <tr>
-      <td>556</td>
+      <td>150</td>
+      <td>0</td>
+      <td>2</td>
+      <td>Byles, Rev. Thomas Roussel Davids</td>
+      <td>male</td>
+      <td>42.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>244310</td>
+      <td>13.0000</td>
+      <td>None</td>
+      <td>S</td>
+    </tr>
+    <tr>
+      <td>641</td>
+      <td>0</td>
+      <td>3</td>
+      <td>Jensen, Mr. Hans Peder</td>
+      <td>male</td>
+      <td>20.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>350050</td>
+      <td>7.8542</td>
+      <td>None</td>
+      <td>S</td>
+    </tr>
+    <tr>
+      <td>559</td>
+      <td>1</td>
+      <td>1</td>
+      <td>Taussig, Mrs. Emil (Tillie Mandelbaum)</td>
+      <td>female</td>
+      <td>39.0</td>
+      <td>1</td>
+      <td>1</td>
+      <td>110413</td>
+      <td>79.6500</td>
+      <td>E67</td>
+      <td>S</td>
+    </tr>
+    <tr>
+      <td>263</td>
       <td>0</td>
       <td>1</td>
-      <td>Wright, Mr. George</td>
+      <td>Taussig, Mr. Emil</td>
       <td>male</td>
-      <td>62.0</td>
+      <td>52.0</td>
+      <td>1</td>
+      <td>1</td>
+      <td>110413</td>
+      <td>79.6500</td>
+      <td>E67</td>
+      <td>S</td>
+    </tr>
+    <tr>
+      <td>217</td>
+      <td>1</td>
+      <td>3</td>
+      <td>Honkanen, Miss. Eliina</td>
+      <td>female</td>
+      <td>27.0</td>
       <td>0</td>
       <td>0</td>
-      <td>113807</td>
-      <td>26.5500</td>
+      <td>STON/O2. 3101283</td>
+      <td>7.9250</td>
       <td>None</td>
       <td>S</td>
     </tr>
