--- a/web/index.html
+++ b/web/index.html
@@ -57,11 +57,11 @@
 </head>
 <body class="bg-white text-zinc-600 dark:bg-black dark:text-zinc-400 font-sans transition-colors duration-300">
     <!-- Nav -->
-    <nav class="border-b border-zinc-200 dark:border-white/10">
-        <div class="max-w-6xl mx-auto px-6">
-            <div class="flex justify-between h-20 items-center">
-                <div class="flex items-center gap-3">
-                    <svg width="20" height="20" viewBox="0 0 47.581429 77.315781" class="text-brand fill-current">
+    <nav class="border-b border-zinc-200 dark:border-white/10 sticky top-0 bg-white/80 dark:bg-black/80 backdrop-blur-md z-50">
+        <div class="max-w-6xl mx-auto px-4 sm:px-6">
+            <div class="flex justify-between h-16 sm:h-20 items-center">
+                <div class="flex items-center gap-2 sm:gap-3">
+                    <svg width="20" height="20" viewBox="0 0 47.581429 77.315781" class="text-brand fill-current w-4 h-4 sm:w-5 sm:h-5">
                         <g transform="translate(351.30686,-158.54937)">
                             <g transform="matrix(2.4307449,0,0,2.4307449,-363.74873,-127.07147)">
                                 <path d="m 12.3073,127.88684 v 11.22412 4.57854 a 5.6360459,5.6360459 0 0 0 5.251876,5.62136 V 138.08674 133.5082 A 5.6360459,5.6360459 0 0 0 12.3073,127.88684 Z" />
@@ -70,37 +70,39 @@
                             </g>
                         </g>
                     </svg>
-                    <span class="font-mono text-lg font-medium tracking-tight text-zinc-900 dark:text-white uppercase">HashPrep</span>
+                    <span class="font-mono text-base sm:text-lg font-medium tracking-tight text-zinc-900 dark:text-white uppercase">HashPrep</span>
                 </div>
-                <div class="flex items-center gap-8">
-                    <button id="theme-toggle" class="text-zinc-600 dark:text-zinc-400 hover:text-zinc-900 dark:hover:text-white transition-colors">
+                <div class="flex items-center gap-4 sm:gap-8">
+                    <button id="theme-toggle" class="text-zinc-600 dark:text-zinc-400 hover:text-zinc-900 dark:hover:text-white transition-colors p-2">
                         <i data-lucide="sun" class="hidden dark:block w-4 h-4"></i>
                         <i data-lucide="moon" class="block dark:hidden w-4 h-4"></i>
                     </button>
-                    <a href="https://github.com/cachevector/hashprep" class="text-xs font-mono uppercase tracking-widest hover:text-zinc-900 dark:hover:text-white transition-colors">GitHub</a>
-                    <a href="#install" class="bg-black text-white dark:bg-white dark:text-black px-4 py-1.5 text-xs font-mono uppercase tracking-widest hover:bg-zinc-800 dark:hover:bg-zinc-200 transition-all">Get Started</a>
+                    <a href="https://github.com/cachevector/hashprep" class="text-[10px] sm:text-xs font-mono uppercase tracking-widest hover:text-zinc-900 dark:hover:text-white transition-colors hidden xs:block">GitHub</a>
+                    <a href="#install" class="bg-black text-white dark:bg-white dark:text-black px-3 py-1.5 sm:px-4 sm:py-1.5 text-[10px] sm:text-xs font-mono uppercase tracking-widest hover:bg-zinc-800 dark:hover:bg-zinc-200 transition-all">Get Started</a>
                 </div>
             </div>
         </div>
     </nav>
 
     <!-- Hero -->
-    <header class="py-24 lg:py-40">
-        <div class="max-w-6xl mx-auto px-6">
-            <h1 class="text-5xl lg:text-8xl font-light tracking-tighter text-zinc-900 dark:text-white mb-10 leading-[0.9]">
+    <header class="py-16 sm:py-24 lg:py-40">
+        <div class="max-w-6xl mx-auto px-4 sm:px-6">
+            <h1 class="text-4xl sm:text-6xl lg:text-8xl font-light tracking-tighter text-zinc-900 dark:text-white mb-6 sm:mb-10 leading-[0.95] sm:leading-[0.9]">
                 Clean data, <br/>
                 <span class="text-zinc-400 dark:text-zinc-600 italic">reproducible pipelines.</span>
             </h1>
-            <p class="text-xl max-w-2xl text-zinc-500 mb-16 leading-relaxed">
+            <p class="text-lg sm:text-xl max-w-2xl text-zinc-500 mb-10 sm:text-zinc-500 sm:mb-16 leading-relaxed">
                 A command-line tool for dataset quality assurance. Detect drift, leakage, and inconsistencies with one command. Built for modern ML engineering.
             </p>
             
             <div class="flex flex-col sm:flex-row items-start gap-4">
-                <div class="group relative">
-                    <div class="flex items-center gap-4 bg-zinc-50 dark:bg-zinc-950 border border-zinc-200 dark:border-white/10 px-6 py-4 font-mono text-sm">
-                        <span class="text-zinc-400 dark:text-zinc-600">$</span>
-                        <span class="text-zinc-900 dark:text-white" id="install-cmd">pip install hashprep</span>
-                        <button onclick="copyInstallCommand()" class="text-zinc-400 dark:text-zinc-600 group-hover:text-brand transition-colors"><i data-lucide="copy" class="w-4 h-4" id="copy-icon"></i></button>
+                <div class="group relative w-full sm:w-auto">
+                    <div class="flex items-center justify-between sm:justify-start gap-4 bg-zinc-50 dark:bg-zinc-950 border border-zinc-200 dark:border-white/10 px-4 py-3 sm:px-6 sm:py-4 font-mono text-xs sm:text-sm">
+                        <div class="flex items-center gap-4">
+                            <span class="text-zinc-400 dark:text-zinc-600">$</span>
+                            <span class="text-zinc-900 dark:text-white" id="install-cmd">pip install hashprep</span>
+                        </div>
+                        <button onclick="copyInstallCommand()" class="text-zinc-400 dark:text-zinc-600 group-hover:text-brand transition-colors p-1"><i data-lucide="copy" class="w-4 h-4" id="copy-icon"></i></button>
                     </div>
                 </div>
             </div>
@@ -108,15 +110,15 @@
     </header>
 
     <!-- Terminal -->
-    <section class="pb-24 lg:pb-40">
-        <div class="max-w-6xl mx-auto px-6">
-            <div class="border border-zinc-200 dark:border-white/10 bg-zinc-50 dark:bg-zinc-950 p-8 lg:p-12 font-mono text-sm leading-relaxed">
-                <div class="flex gap-4 mb-8 text-zinc-400 dark:text-zinc-600 border-b border-zinc-200 dark:border-white/5 pb-4">
+    <section class="pb-16 sm:pb-24 lg:pb-40">
+        <div class="max-w-6xl mx-auto px-4 sm:px-6">
+            <div class="border border-zinc-200 dark:border-white/10 bg-zinc-50 dark:bg-zinc-950 p-6 sm:p-8 lg:p-12 font-mono text-xs sm:text-sm leading-relaxed overflow-x-auto whitespace-nowrap sm:whitespace-normal">
+                <div class="flex gap-4 mb-6 sm:mb-8 text-zinc-400 dark:text-zinc-600 border-b border-zinc-200 dark:border-white/5 pb-4 min-w-max sm:min-w-0">
                     <span class="text-zinc-900 dark:text-white">bash</span>
                     <span>stdout</span>
                     <span>v0.1.0</span>
                 </div>
-                <div class="space-y-1">
+                <div class="space-y-1 min-w-max sm:min-w-0">
                     <div class="flex gap-3"><span class="text-zinc-400 dark:text-zinc-600">01</span> <span class="text-zinc-700 dark:text-zinc-300">hashprep scan data.csv --target Survived</span></div>
                     <div class="flex gap-3"><span class="text-zinc-400 dark:text-zinc-600">02</span> <span>&nbsp;</span></div>
                     <div class="flex gap-3"><span class="text-zinc-400 dark:text-zinc-600">03</span> <span class="text-brand">ANALYSIS SUMMARY</span></div>
@@ -134,54 +136,54 @@
     <!-- Features -->
     <section id="features" class="border-t border-zinc-200 dark:border-white/10">
         <div class="max-w-6xl mx-auto">
-            <div class="feature-grid">
-                <div class="feature-card">
-                    <span class="font-mono text-xs text-brand uppercase tracking-widest mb-6 block">01 / Profiling</span>
-                    <h3 class="text-zinc-900 dark:text-white text-lg font-medium mb-4 uppercase tracking-tight">Intelligent Checks</h3>
-                    <p class="text-sm leading-relaxed text-zinc-500">Detect missing patterns, outliers, and type inconsistencies using statistical inference.</p>
+            <div class="feature-grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4">
+                <div class="feature-card p-8 sm:p-10">
+                    <span class="font-mono text-[10px] sm:text-xs text-brand uppercase tracking-widest mb-4 sm:mb-6 block">01 / Profiling</span>
+                    <h3 class="text-zinc-900 dark:text-white text-base sm:text-lg font-medium mb-3 sm:mb-4 uppercase tracking-tight">Intelligent Checks</h3>
+                    <p class="text-xs sm:text-sm leading-relaxed text-zinc-500">Detect missing patterns, outliers, and type inconsistencies using statistical inference.</p>
                 </div>
-                <div class="feature-card">
-                    <span class="font-mono text-xs text-brand uppercase tracking-widest mb-6 block">02 / Monitoring</span>
-                    <h3 class="text-zinc-900 dark:text-white text-lg font-medium mb-4 uppercase tracking-tight">Drift Detection</h3>
-                    <p class="text-sm leading-relaxed text-zinc-500">Compare train and production distributions with KS-tests and Chi-squared metrics.</p>
+                <div class="feature-card p-8 sm:p-10">
+                    <span class="font-mono text-[10px] sm:text-xs text-brand uppercase tracking-widest mb-4 sm:mb-6 block">02 / Monitoring</span>
+                    <h3 class="text-zinc-900 dark:text-white text-base sm:text-lg font-medium mb-3 sm:mb-4 uppercase tracking-tight">Drift Detection</h3>
+                    <p class="text-xs sm:text-sm leading-relaxed text-zinc-500">Compare train and production distributions with KS-tests and Chi-squared metrics.</p>
                 </div>
-                <div class="feature-card">
-                    <span class="font-mono text-xs text-brand uppercase tracking-widest mb-6 block">03 / Engineering</span>
-                    <h3 class="text-zinc-900 dark:text-white text-lg font-medium mb-4 uppercase tracking-tight">Auto-Codegen</h3>
-                    <p class="text-sm leading-relaxed text-zinc-500">Automatically generate Pandas scripts and Scikit-Learn pipelines to fix identified issues.</p>
+                <div class="feature-card p-8 sm:p-10">
+                    <span class="font-mono text-[10px] sm:text-xs text-brand uppercase tracking-widest mb-4 sm:mb-6 block">03 / Engineering</span>
+                    <h3 class="text-zinc-900 dark:text-white text-base sm:text-lg font-medium mb-3 sm:mb-4 uppercase tracking-tight">Auto-Codegen</h3>
+                    <p class="text-xs sm:text-sm leading-relaxed text-zinc-500">Automatically generate Pandas scripts and Scikit-Learn pipelines to fix identified issues.</p>
                 </div>
-                <div class="feature-card">
-                    <span class="font-mono text-xs text-brand uppercase tracking-widest mb-6 block">04 / Reporting</span>
-                    <h3 class="text-zinc-900 dark:text-white text-lg font-medium mb-4 uppercase tracking-tight">Static Reports</h3>
-                    <p class="text-sm leading-relaxed text-zinc-500">Clean, publication-quality HTML and PDF reports with essential statistical visualizations.</p>
+                <div class="feature-card p-8 sm:p-10">
+                    <span class="font-mono text-[10px] sm:text-xs text-brand uppercase tracking-widest mb-4 sm:mb-6 block">04 / Reporting</span>
+                    <h3 class="text-zinc-900 dark:text-white text-base sm:text-lg font-medium mb-3 sm:mb-4 uppercase tracking-tight">Static Reports</h3>
+                    <p class="text-xs sm:text-sm leading-relaxed text-zinc-500">Clean, publication-quality HTML and PDF reports with essential statistical visualizations.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="py-24 border-t border-zinc-200 dark:border-white/10">
-        <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row justify-between items-start gap-12">
+    <footer class="py-16 sm:py-24 border-t border-zinc-200 dark:border-white/10">
+        <div class="max-w-6xl mx-auto px-4 sm:px-6 flex flex-col md:flex-row justify-between items-start gap-12">
             <div class="max-w-xs">
                 <div class="flex items-center gap-3 mb-6">
                     <span class="font-mono text-sm font-medium text-zinc-900 dark:text-white uppercase tracking-tighter">HashPrep</span>
                 </div>
-                <p class="text-xs leading-relaxed text-zinc-500 dark:text-zinc-600 font-mono uppercase tracking-tighter">
+                <p class="text-[10px] sm:text-xs leading-relaxed text-zinc-500 dark:text-zinc-600 font-mono uppercase tracking-tighter">
                     A project by CacheVector. <br/>
                     MIT Licensed. 2026.
                 </p>
             </div>
             
-            <div class="grid grid-cols-2 gap-20">
+            <div class="grid grid-cols-2 gap-10 sm:gap-20">
                 <div>
-                    <h4 class="text-xs font-mono uppercase tracking-widest text-zinc-900 dark:text-white mb-6">Social</h4>
-                    <ul class="space-y-4 text-xs font-mono uppercase tracking-widest text-zinc-500 dark:text-zinc-600">
+                    <h4 class="text-[10px] sm:text-xs font-mono uppercase tracking-widest text-zinc-900 dark:text-white mb-4 sm:mb-6">Social</h4>
+                    <ul class="space-y-3 sm:space-y-4 text-[10px] sm:text-xs font-mono uppercase tracking-widest text-zinc-500 dark:text-zinc-600">
                         <li><a href="https://github.com/cachevector/hashprep" class="hover:text-zinc-900 dark:hover:text-white transition-colors">GitHub</a></li>
                     </ul>
                 </div>
                 <div>
-                    <h4 class="text-xs font-mono uppercase tracking-widest text-zinc-900 dark:text-white mb-6">Product</h4>
-                    <ul class="space-y-4 text-xs font-mono uppercase tracking-widest text-zinc-500 dark:text-zinc-600">
+                    <h4 class="text-[10px] sm:text-xs font-mono uppercase tracking-widest text-zinc-900 dark:text-white mb-4 sm:mb-6">Product</h4>
+                    <ul class="space-y-3 sm:space-y-4 text-[10px] sm:text-xs font-mono uppercase tracking-widest text-zinc-500 dark:text-zinc-600">
                         <li><a href="#" class="hover:text-zinc-900 dark:hover:text-white transition-colors">Documentation</a></li>
                         <li><a href="#" class="hover:text-zinc-900 dark:hover:text-white transition-colors">Changelog</a></li>
                     </ul>
