--- a/web/index.html
+++ b/web/index.html
@@ -77,7 +77,7 @@
                         <i data-lucide="sun" class="hidden dark:block w-4 h-4"></i>
                         <i data-lucide="moon" class="block dark:hidden w-4 h-4"></i>
                     </button>
-                    <a href="https://github.com/cachevector/hashprep" class="text-[10px] sm:text-xs font-mono uppercase tracking-widest hover:text-zinc-900 dark:hover:text-white transition-colors hidden xs:block">GitHub</a>
+                    <a href="https://github.com/cachevector/hashprep" class="text-[10px] sm:text-xs font-mono uppercase tracking-widest hover:text-zinc-900 dark:hover:text-white transition-colors">GitHub</a>
                     <a href="#install" class="bg-black text-white dark:bg-white dark:text-black px-3 py-1.5 sm:px-4 sm:py-1.5 text-[10px] sm:text-xs font-mono uppercase tracking-widest hover:bg-zinc-800 dark:hover:bg-zinc-200 transition-all">Get Started</a>
                 </div>
             </div>
